<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="name">Name</string>
    <string name="group">Group</string>
    <string name="origin">Origin</string>
    <string name="temperament">Temperament</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="search_by_breed_name" tools:ignore="ExtraTranslation">Search by breed name</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>
    <string name="no_results_try_different_search">No Results found. Try a different search</string>
    <string name="start_your_search">Start your search</string>
    <string name="results">%1$d results</string>
    <string name="detail">Detail</string>
    <string name="click_to_reload">Click to reload</string>
</resources>